[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/orca.png" type="Texture" id=1]
[ext_resource path="res://scripts/orca.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.64001
height = 64.4846

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("spr_orca:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.7, 2.6, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 1, 2, 3, 2 ]
}

[node name="orca" type="Area2D" groups=[
"gr_orca",
]]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="col_orca" type="CollisionShape2D" parent="."]
position = Vector2( -7.15137, 3.44326 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="spr_orca" type="Sprite" parent="."]
position = Vector2( 0, 9.53674e-07 )
scale = Vector2( 0.16125, 0.115833 )
texture = ExtResource( 1 )
hframes = 4
frame = 2

[node name="anim_orca" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/Idle = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_orca_body_entered"]
